--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.0",
+    "@angular/animations": "^14.3.0",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
@@ -21,7 +21,8 @@
     "bootstrap": "^5.3.0",
     "datepicker": "^0.0.0",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^0.0.1",
+    "ngx-bootstrap": "10.0",
+    "ngx-toastr": "^15.2.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
