--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.0",
     "datepicker": "^0.0.0",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^3.0.0",
     "ngx-bootstrap": "10.0",
     "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.2.2",
